@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-05T00:39:57Z",
+  "timestamp" : "2024-09-07T00:39:16Z",
   "count_outdated" : 1161,
   "uniques_outdated" : 690,
-  "count" : 1166,
-  "uniques" : 695,
+  "count" : 1168,
+  "uniques" : 697,
   "clones" : [
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-06T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
