@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2024-09-04T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-06T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
