@@ -1,3 +1,12 @@
+2024-09-07T00:39:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10747113294 # 411
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-07
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 690 1161 / 695 1166
+* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 697 1168
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-09-06]
+
 2024-09-05T00:39:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10711746209 # 409
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
